# embodied-ai

./: CMakeLists.txt  README.md  embodied-ai.ino  few-shot-prompts.json  fine-tune.py  package.xml  system-prompt.md
launch/: full_demo.launch  llm_chat.launch  realsense_d435_rviz.launch  serial_node.launch
messages/: ActuatorCommand.msg
msg/: ActuatorState.msg
rviz/: realsense_d435.rviz
scripts/: llm_chat_node.py
